--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <i class="fas fa-arrow-up"></i>
   </div>̥
 
-    <header>
+    <header>̥
       <div class="nav-bar">
         <a href="#" class="logo">SwamySaxena</a>
         <div class="navigation">
